--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,16 @@
 spring.application.name=EmployeeManagementSystem
 server.port = 2027
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/employeemanagementsystem
+spring.datasource.url = jdbc:mysql://localhost:3306/ems
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-#email
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
+spring.mail.username=studentofnationalimportance@gmail.com
+spring.mail.password=asdz eagv eajf llaa
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
