--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=studentofnationalimportance@gmail.com
-spring.mail.password=asdz eagv eajf llaa
+spring.mail.username=youremail@gmail.com
+spring.mail.password=aaaa bbbb cccc dddd
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
